sandbox/output
TicketDispenserTest.java:51: error: cannot find symbol
        TurnTicket ticket = dispenser.getTurnTicket();
                            ^
  symbol:   variable dispenser
  location: class TicketDispenserTest
1 error
